--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -4,7 +4,7 @@
 <app-take-note (addingNote)="recievemessage($event)"></app-take-note>
 
 <div class="pinned" >PINNED</div>
-<app-displaynote [cards]="cards"   fxLayout="{{layout}}" fxLayout="row wrap" fxLayoutAlign="center none" (emitUnPinnedCard)='getUnpinCard($event)'></app-displaynote>
+<app-displaynote [cards]="cards"   fxLayout="{{layout}}" fxLayout="row wrap" fxLayoutAlign="center none" (emitPinnedCard)="getPinCard($event)"  (emitUnPinnedCard)='getUnpinCard($event)'></app-displaynote>
 
 <div class="others">OTHERS</div>
-<app-displaynote [cards]="cards"   fxLayout="{{layout}}" fxLayout="row wrap" fxLayoutAlign="center none" (emitPinnedCard)="getPinCard($event)" ></app-displaynote>
+<app-displaynote [cards]="allcards"   fxLayout="{{layout}}" fxLayout="row wrap" fxLayoutAlign="center none" (emitPinnedCard)="getPinCard($event)" ></app-displaynote>
