--- a/src/app/components/updatenote/updatenote.component.html
+++ b/src/app/components/updatenote/updatenote.component.html
@@ -1,39 +1,45 @@
-<div fxFlex='100' class="main">
+<div [style.backgroundColor]=data.array.color fxFlex='100' class="main">
+
   <div style="margin: 20px">
     <div fxFlex="100" fxLayoutAlign='space-between start' fxLayout='row'>
-
-      <div>
-        <input matInput [(ngModel)]="data.array.title" placeholder="Edit title...">
-      </div>
-      <div (click)='openSnackBar()'>{{array.title}}></div>
-    </div>
+        <div *ngIf="data.cond!='trash'"><input matInput [(ngModel)]="data.array.title" placeholder="add title here"></div>
+        <div *ngIf="data.cond=='trash'" (click)='openSnackBar()'>{{data.array.title}}</div>
     <div >
         <div class="barpin" *ngIf="flag1==true" >
-
-          <img src="../../../assets/image/pinbar.svg" />
-
+          <img src="../../../assets/image/pinbar.svg" (click)='doUnPin(data.array)'/>
         </div>
-        <div class="barpin" >
-
-          <img src="../../../assets/image/unpinbar.svg" />
-        </div>
-      </div>
-
-  </div>
-  <div style="margin:20px">
-      <div >
-        <div ><input matInput [(ngModel)]="data.array.description" placeholder="Edit description..."></div>
-        <div  (click)='openSnackBar()'>{{array.description}}</div>
-      </div>
-      <div >
-        <div>
-          <!-- <mat-checkbox><input class='desc' matInput [(ngModel)]="array.description" placeholder="add description here"></mat-checkbox> -->
-          <!-- <img src='../../../assets/image/outline-check_box-24px.svg' matInput [(ngModel)]='data.array.noteCheckLists'  > -->
-        </div>
+        <!-- <div class="barpin"  >
+          <img src="../../../assets/image/unpinbar.svg" (click)='doPin(data.array)'/>
+        </div> -->
       </div>
     </div>
-  <div fxFlex="50" >
-      <app-iconlist></app-iconlist>
   </div>
+
+  <div style="margin:20px">
+    <!-- ....disc...... -->
+
+    <div *ngIf="data.cond!='trash'"><input class='desc' matInput [(ngModel)]="data.array.description" placeholder="Add description"></div>
+    <div *ngIf="data.cond=='trash'" (click)='openSnackBar()'>{{data.array.description}}</div>
+
+    <!-- ..... -->
+    
+      <!-- <app-iconlist></app-iconlist> -->
+
+      <div fxLayoutAlign='space-between end'>
+        <div fxFlex='100' *ngIf="data.cond=='trash'">
+          <button mat-icon-button [matMenuTriggerFor]="menu" colour="basic" matTooltip="more">
+            <img id="img" src="../../../assets/image/outline-more_vert-24px.svg" />
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item >Delete Forever</button>
+            <button mat-menu-item >Restore</button>
+          </mat-menu>
+        </div>
+        <div fxFlex='100'  *ngIf="data.cond!='trash'">
+          <app-iconlist></app-iconlist>
+        </div>
+        <button fxLayoutAlign='end end' mat-button [mat-dialog-close]="data" cdkFocusInitial >close</button>
+      </div>
+    </div>
 
 </div>
