Fundoo Notes front end on 19/04/2019

--- a/src/app/components/iconlist/iconlist.component.html
+++ b/src/app/components/iconlist/iconlist.component.html
@@ -14,7 +14,7 @@
 
     <mat-menu #remindme="matMenu" class="matmenu">
       <div class="remaindMenu">
-          <app-reminder></app-reminder>
+          <app-reminder [card]='card'></app-reminder>
         <!-- <mat-nav-list>
           <mat-list role="List">
             <mat-list-item role="listitem">
