--- a/src/app/components/reminder/reminder.component.html
+++ b/src/app/components/reminder/reminder.component.html
@@ -1,7 +1,10 @@
 <div *ngIf="reminderShow" fxFlex="100">
   <div *ngFor="let remind of remindList">
     <div fxLayoutAlign="space-between center">
-      <button mat-menu-item (click)="reminder(remind.dayCount,remind.timeCount)">
+      <button
+        mat-menu-item
+        (click)="reminder(remind.dayCount, remind.timeCount)"
+      >
         <div fxLayout="row" fxLayoutAlign="space-between center">
           <div>
             {{ remind.day }}
@@ -14,9 +17,18 @@
     </div>
   </div>
   <div>
-    <button overlapTrigger="true" (click)="toggle" (click)=$event.stopPropagation() (click)="reminderShow=false" mat-menu-item>
+    <button
+      overlapTrigger="true"
+      (click)="(toggle)"
+      (click)="$event.stopPropagation()"
+      (click)="reminderShow = false"
+      mat-menu-item
+    >
       <div fxLayout="row">
-        <div fxLayoutAlign="space-around center" (click)=$event.stopPropagation() >
+        <div
+          fxLayoutAlign="space-around center"
+          (click)="$event.stopPropagation()"
+        >
           <img src="../../../assets/image/outline-schedule-24px.svg" />
         </div>
         <div fxFlexOffset="8">Pick date & time</div>
@@ -25,56 +37,80 @@
   </div>
 </div>
 
-<div *ngIf="!reminderShow" (click)=$event.stopPropagation() fxLayout="column" fxFlex="100"> 
+<!-- Pick date and Time -->
+
+<div
+  *ngIf="!reminderShow"
+  (click)="$event.stopPropagation()"
+  fxLayout="column"
+  fxFlex="100"
+>
   <div>
     <button overlapTrigger="true" mat-menu-item>
-        <div fxLayout="row" (click)=$event.stopPropagation()>
-          <div fxLayoutAlign="space-between center" (click)=$event.stopPropagation() (click)="toggle()">
-            <img src="../../../assets/image/sharp-keyboard_backspace-24px.svg" />
+      <div fxLayout="row" (click)="$event.stopPropagation()">
+        <div
+          fxLayoutAlign="space-between center"
+          (click)="$event.stopPropagation()"
+          (click)="toggle()"
+        >
+          <img src="../../../assets/image/sharp-keyboard_backspace-24px.svg" />
+        </div>
+        <div fxFlexOffset="6">Pick date & time</div>
+      </div>
+    </button>
+  </div>
+
+  <div fxLayout="row" fxLayoutAlign="space-around center">
+    <mat-form-field class="example-full-width">
+      <input
+        matInput
+        [min]="todaydate"
+        [matDatepicker]="picker"
+        placeholder="Choose a date"
+        [(ngModel)]="checker"
+      />
+      <mat-datepicker-toggle matSuffix [for]="picker">
+        <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+      </mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </div>
+
+  <div
+    fxLayout="row"
+    fxLayoutAlign="space-around center"
+    (click)="$event.stopPropagation()"
+  >
+    <mat-form-field>
+      <mat-label>
+        Pick time
+      </mat-label>
+      <mat-select [(value)]="selected">
+        <mat-option *ngFor="let remind of customList" value="remind.value">
+          <div>
+            <button mat-menu-item (clicked)="customReminder(remind.timeCount)">
+              <div fxLayout="row" fxLayoutAlign="space-between center"></div>
+              <div>{{ remind.timeZone }}</div>
+              <div fxFlexOffset="18">{{ remind.time }}</div>
+            </button>
           </div>
-          <div fxFlexOffset="8">Pick date & time</div>
-        </div>
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div fxLayout="row">
+    <div fxLayout="row"></div>
+    <div>
+      <button
+        fxLayout="column"
+        fxLayoutAlign="end end"
+        (click)="saveReminder()"
+        mat-menu-item
+      >
+        Save
       </button>
-      </div>
-
-      <div fxLayout="row"  fxLayoutAlign="space-around center">
-        <mat-form-field class="example-full-width">
-          <input matInput [min]="todaydate" [matDatepicker]="picker" placeholder="Choose a date">
-          <mat-datepicker-toggle matSuffix [for]="picker">
-            <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-          </mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-      </div>
-      
-
-      <div fxLayout="row" fxLayoutAlign="space-around center" (click)="$event.stopPropagation()">
-        <mat-form-field>
-          <mat-label>
-            Pick time
-          </mat-label>
-          <mat-select [(value)]=selected>
-            <mat-option *ngFor="let remind of customList" value=remind.value>
-              <div>
-                <button mat-menu-item (clicked)="customReminder(remind.timeCount)">
-                  <div fxLayout="row" fxLayoutAlign="space-between center"></div>
-                  <div>{{remind.timeZone}}</div>
-                  <div fxFlexOffset="18">{{remind.time}}</div>
-
-                </button>
-              </div>
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div fxLayout="row">
-        <div fxLayout="row"></div>
-        <div>
-          <button fxLayout="column" fxLayoutAlign="end end" (click)="saveReminder()"  mat-menu-item>Save</button>
-        </div>
-
-      </div>
-      
+    </div>
+  </div>
 </div>
 
-<!-- ([ngModel)]="checker" -->
+
