--- a/src/app/components/updatenote/updatenote.component.scss
+++ b/src/app/components/updatenote/updatenote.component.scss
@@ -1,6 +1,6 @@
-// ::ng-deep .mat-dialog-container {
-//   padding: 0%;
-// }
+::ng-deep .mat-dialog-container {
+  padding: 0%;
+}
 // .barpin {
 //   border: none;
 //   outline: none;
