--- a/src/app/components/trash/trash.component.scss
+++ b/src/app/components/trash/trash.component.scss
@@ -4,8 +4,25 @@ h3{
 }
 .emt-trash{
     background-color: rgb(251, 251, 251);
- 
+    color: #1a73e8;
 }
 app-displaynote {
     flex-wrap: wrap;
+}
+.trash{
+    color: #202124;
+    cursor: default;
+    // display: -webkit-box;
+    // display: -moz-box;
+    // display: -ms-flexbox;
+    // display: -webkit-flex;
+    display: flex;
+    font-size: 17px;
+    font-style: italic;
+    // -webkit-align-items: center;
+    align-items: center;
+    // -webkit-justify-content: center;
+    justify-content: center;
+    padding-top: 24px;
+    padding-bottom: 8px;
 }
