Fundoo Edit note push

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -136,6 +136,15 @@
         <div mat-card-avatar class="example-header-image"></div>
       </button>
 
+      <!-- <div class="profileMenu" aria-label="Account Information" img-loaded="1">
+        <div>
+
+        </div>
+
+      </div> -->
+
+
+
       <div class="profileMenu">
         <div fxLayout="row" fxLayoutAlign="start start">
        
@@ -154,6 +163,8 @@
           Sign out
         </button>
       </div>
+
+
     </mat-menu>
   </mat-toolbar>
 
