--- a/src/app/components/trash/trash.component.html
+++ b/src/app/components/trash/trash.component.html
@@ -1,5 +1,5 @@
 <div fxLayoutAlign='center center' class="trash" fxLayout='row'>
-        Notes in Trash are deleted after 7 days.
+        "Notes in Trash are deleted after 7 days."
           <button fxFlexOffset="5" class="emt-trash" fxLayoutAlign='center center'  mat-button (click)="emptybin()">Empty Trash</button>
           </div>
 
