--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -3,10 +3,10 @@
  
 <app-take-note (addingNote)="recievemessage($event)"></app-take-note>
 
-<div class="pinned" class = "pinned1"  >PINNED</div>
+<div class="pinned" class = "pinned1" *ngIf="cards.length >0"  >PINNED</div>
 <app-displaynote [cards]="cards"   fxLayout="{{layout}}" fxLayout="row wrap" fxLayoutAlign="center none" (emitPinnedCard)="getPinCard($event)"  (emitUnPinnedCard)='getUnpinCard($event)'></app-displaynote>
 
-<div class="others" class = "unpinned1" >OTHERS</div>
+<div class="others" class = "unpinned1" *ngIf="allcards.length >0 && cards.length >0" >OTHERS</div>
 <app-displaynote [cards]="allcards"   fxLayout="{{layout}}" fxLayout="row wrap" fxLayoutAlign="center none" (emitPinnedCard)="getPinCard($event)" ></app-displaynote>
 
 <!-- *ngIf="pinArray.length >0" -->
