--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -136,11 +136,11 @@
         <div mat-card-avatar class="example-header-image"></div>
       </button>
 
-      <!-- <div class="profileMenu" aria-label="Account Information" img-loaded="1">
-        <div>
+
+      <!-- <div class="profileMenu" class="gb_Ta gb_z gb_7b" aria-label="Account Information" img-loaded="1">
+        <div class="gb_1a">
 
         </div>
-
       </div> -->
 
 
