--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -291,3 +291,49 @@ h1.example-app-name {
   margin-left: auto;
   margin-right: auto
 }
+
+
+
+// .gb_Ta {
+//   outline: none;
+//   transform: translateZ(0);
+// }
+
+element.style {
+}
+.gb_Fc.gb_7b .gb_Ra, .gb_Fc.gb_7b .gb_Sa, .gb_Fc.gb_7b .gb_z, .gb_7b.gb_z {
+    display: block;
+}
+.gb_Ta {
+    outline: none;
+    transform: translateZ(0);
+}
+.gb_z {
+    z-index: 991;
+    line-height: normal;
+}
+
+.gb_z {
+  background: #fff;
+  border: 1px solid #ccc;
+  border-color: rgba(0,0,0,.2);
+  color: #000;
+  // -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.2);
+  box-shadow: 0 2px 10px rgba(0,0,0,.2);
+  display: none;
+  outline: none;
+  overflow: hidden;
+  position: absolute;
+  right: 8px;
+  top: 62px;
+  // -webkit-animation: gb__a .2s;
+  animation: gb__a .2s;
+  // -webkit-border-radius: 2px;
+  border-radius: 2px;
+  // -webkit-user-select: text;
+}
+
+.gb_1a {
+  margin: 20px;
+  white-space: nowrap;
+}
