Fundoo frontend responsive

--- a/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/src/app/components/forgotpassword/forgotpassword.component.html
@@ -14,8 +14,8 @@
     <mat-card-subtitle class="subtitle" fxLayoutAlign="center center">Enter your email id to reset password</mat-card-subtitle>
 
     <form>
-      <div fxLayoutAlign="center center" class="email">
-        <mat-form-field appearance="outline" class="email" fxLayoutAlign="center center">
+      <div fxLayoutAlign="center center"  class="email">
+        <mat-form-field appearance="outline" fxFlex="100" class="email" fxLayoutAlign="center center">
           <mat-label>Email id</mat-label>
           <input matInput placeholder="Enter your email id" [formControl]="emailFormControl"
             [errorStateMatcher]="matcher">
