--- a/src/app/components/forgotpassword/forgotpassword.component.scss
+++ b/src/app/components/forgotpassword/forgotpassword.component.scss
@@ -8,13 +8,18 @@
    
     margin-left: auto;
     margin-right: auto;
-    margin-top: 4%;
+    margin-top: 8%;
     margin-bottom: 3%;
     margin-left: auto;
     width: 40%;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.459); 
     border-radius: 2%
 
+}
+@media only screen and (max-width: 600px) {
+  .email{
+    width: 100%;
+  }
 }
 .email{
     margin-left: 0%;
