--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -13,14 +13,15 @@
         <mat-card-title calss="acc">Create your Fundoo Account</mat-card-title>
         <mat-card-subtitle class="acc1">Continue to Fundoo</mat-card-subtitle>
       </mat-card-header>
+    
 
       <body>
-        <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="2%">
-          <mat-form-field appearance="outline" id="firstname">
+        <div fxLayout="row" fxLayout.xs="column"fxLayoutGap="2%">
+          <mat-form-field   fxFlex.xs="100"  appearance="outline" id="firstname">
             <mat-label fxFlex="40"> First name</mat-label>
             <input matInput placeholder="First name" [formControl]="firstname" />
           </mat-form-field>
-          <mat-form-field appearance="outline" id="lastname">
+          <mat-form-field  fxFlex.xs="100"   appearance="outline" id="lastname">
             <mat-label fxFlex="40"> Last name</mat-label>
             <input matInput placeholder="Last name" [formControl]="lastname"/>
           </mat-form-field>
@@ -80,7 +81,7 @@
             />
             <!-- <mat-hint>Use 8 or more characters with a mix of letters, numbers & symbols</mat-hint>  -->
           </mat-form-field>
-          <mat-icon id="suffix" matSuffix (click)="hide = !hide">{{
+          <mat-icon fxLayoutAlign="end center" id="suffix" matSuffix (click)="hide = !hide">{{
             hide ? "visibility_off" : "visibility"
           }}</mat-icon>
         </div>
@@ -97,7 +98,10 @@
           </mat-form-field> -->
 
           <!-- Sign up button -->
-
+          <!-- <br>
+          <mat-divider></mat-divider>
+          <br> -->
+          <br>
           <div class="signup-in">
           
 
