--- a/src/app/components/updatenote/updatenote.component.html
+++ b/src/app/components/updatenote/updatenote.component.html
@@ -2,14 +2,14 @@
 
   <div style="margin: 20px">
     <div fxFlex="100" fxLayoutAlign='space-between start' fxLayout='row'>
-        <div *ngIf="data.cond!='trash'"><input matInput [(ngModel)]="data.array.title" placeholder="add title here"></div>
-        <div *ngIf="data.cond=='trash'" (click)='openSnackBar()'>{{data.array.title}}</div>
-    <div >
-        <div class="barpin" *ngIf="flag1 == true" >
-          <img src="../../../assets/image/pinbar.svg" (click)='doUnPin(data.array.pinned)'/>
+        <div *ngIf="data.cond !='trash'"><input matInput [(ngModel)]="data.array.title" placeholder="add title here"></div>
+        <div *ngIf="data.cond =='trash'" (click)='openSnackBar()'>{{data.array.title}}</div>
+          <div *ngIf="data.cond !='trash'" >
+        <div class="barpin" *ngIf="data.array.pinned" >
+          <img src="../../../assets/image/pinbar.svg" (click)='doUnPin(data.array)'/>
         </div>
-        <div class="barpin"  *ngIf="flag1 != true">
-          <img src="../../../assets/image/unpinbar.svg" (click)='doPin(data.array.pinned)'/>
+        <div class="barpin"  *ngIf="!data.array.pinned">
+          <img src="../../../assets/image/unpinbar.svg" (click)='doPin(data.array)'/>
         </div>
       </div>
     </div>
@@ -35,9 +35,38 @@
             <button mat-menu-item >Restore</button>
           </mat-menu>
         </div>
+
+        <!-- reminder -->
+
+    <!-- <div  fxLayout="row" fxLayout="row wrap">
+      <mat-chip-list class="chip">
+
+        <div *ngIf="(todaydate | date: 'shortDate') == (data.array.reminder | date: 'shortDate') && (array.reminder!='')">
+          <mat-chip >Today {{array.reminder | date:'shortTime'}}
+            <mat-icon matChipRemove (click)="removeReminder(array)">cancel</mat-icon>
+          </mat-chip>
+        </div>
+
+        <div *ngIf="(tomorrow | date: 'shortDate') == (data.array.reminder | date: 'shortDate') && (array.reminder!='')">
+            <mat-chip>Tomorrow {{array.reminder | date:'shortTime'}}
+              <mat-icon matChipRemove (click)="removeReminder(array)">cancel</mat-icon>
+            </mat-chip>
+          </div>
+
+          <div *ngIf="(tomorrow | date: 'shortDate') != (data.array.reminder | date: 'shortDate') && (todaydate | date: 'shortDate') != (array.reminder | date: 'shortDate') && (array.reminder!='') ">
+              <mat-chip>{{array.reminder | date:'medium'}}
+                <mat-icon matChipRemove (click)="removeReminder(array)">cancel</mat-icon>
+              </mat-chip>
+            </div>
+
+      </mat-chip-list>
+  </div> -->
+
+<!-- icon -->
         <div fxFlex='100'  *ngIf="data.cond!='trash'">
           <app-iconlist></app-iconlist>
         </div>
+
         <button fxLayoutAlign='end end' mat-button [mat-dialog-close]="data" cdkFocusInitial >close</button>
       </div>
     </div>
