--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 
-<router-outlet></router-outlet>
+<router-outlet>
+  
+</router-outlet>
 
 
 <!-- <div fxLayout="row"  fxLayout.xs='column'fxFlex='100' >
