--- a/src/app/components/displaynote/displaynote.component.scss
+++ b/src/app/components/displaynote/displaynote.component.scss
@@ -50,3 +50,116 @@
 .chip {
   background-color: inherit;
 }
+
+
+//new css
+
+// .icon{
+
+//   opacity: 0;
+// &:hover{
+// opacity: 1.4;
+// }
+// }
+
+// .barpin {
+//   border: none;
+//   outline: none;
+//   user-select: none;
+//   margin-top: 6px
+// }
+// .cardcontent{
+// padding: 5px
+// }
+
+
+// .gridView{
+//   flex-flow: row wrap;
+//   box-sizing: border-box;
+//   display: flex;
+//   place-content: flex-start;
+//   align-items: flex-start;
+//   margin-top: 2%;
+//   margin-left: 18%;
+//   .matcard{
+//     // background-color: lightcoral;
+//      border-radius: 10px;
+//      min-width: 260px;
+//    max-width: 25%;
+//       // margin-left: auto;
+//       margin-top: 6%;
+//      margin-right: 1%;
+//    }
+//   .title{
+//     font-family: 'googlefonts',arial,sans-serif;
+//     font-weight: bold;
+//     padding-bottom: 4px
+//   }
+//   .discp{
+//     font-family: 'googlefonts',arial,sans-serif;
+//     word-break: break-all;
+//     padding-bottom: 4px;
+//     max-width: 240px;
+//   }
+// }
+// .close{
+//   .listView{
+//     flex-direction: column;
+//     box-sizing: border-box;
+//     display: flex;
+//     place-content: center flex-start;
+//     align-items: center;
+//     .matcard{
+//       // background-color: lightcoral;
+//        border-radius: 10px;
+//        width: -webkit-fill-available;
+//        margin-top: 2%;
+//       //  min-width: 50%;
+//      max-width: 45%;
+//       //  margin-left: auto;
+//       //  margin-right: auto
+//      }
+//     .title{
+//       font-family: 'googlefonts',arial,sans-serif;
+//       font-weight: bold;
+//       padding-bottom: 4px
+//     }
+//     .discp{
+//       font-family: 'googlefonts',arial,sans-serif;
+//       word-break: break-all;
+//       padding-bottom: 2px;
+//       max-width: 100%;
+//     }
+//   }
+// }
+
+// .open{
+//   .listView{
+//     flex-direction: column;
+//     box-sizing: border-box;
+//     display: flex;
+//     place-content: center flex-start;
+//     align-items: center;
+//     .matcard{
+//       // background-color: lightcoral;
+//        border-radius: 10px;
+//        width: -webkit-fill-available;
+//        margin-top: 3%;
+//       //  min-width: 50%;
+//      max-width: 58%;
+//       //  margin-left: auto;
+//       //  margin-right: auto
+//      }
+//     .title{
+//       font-family: 'googlefonts',arial,sans-serif;
+//       font-weight: bold;
+//       padding-bottom: 4px
+//     }
+//     .discp{
+//       font-family: 'googlefonts',arial,sans-serif;
+//       word-break: break-all;
+//       padding-bottom: 2px;
+//       max-width: 100%;
+//     }
+//   }
+// }
