--- a/src/app/components/note/note.component.scss
+++ b/src/app/components/note/note.component.scss
@@ -39,3 +39,10 @@ element.style {
     margin: 32px 32px 8px;
     // position: absolute;
 }
+.close{
+    margin-left: 15%
+} 
+
+.open{
+    margin-left: 4%;
+}
