--- a/src/app/components/updatenote/updatenote.component.scss
+++ b/src/app/components/updatenote/updatenote.component.scss
@@ -1,6 +1,9 @@
 ::ng-deep .mat-dialog-container {
   padding: 0%;
 }
+.title{
+  word-break: break-all
+}
 // .barpin {
 //   border: none;
 //   outline: none;
